Fix CSS align

--- a/app/styles/ConferencePlanning.css
+++ b/app/styles/ConferencePlanning.css
@@ -1,8 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Dosis);
 
-.container-planning { 
-    position: relative;
-    font-family: 'Dosis', sans-serif;
+.container-planning {
+  position: relative;
+  font-family: 'Dosis', sans-serif;
 }
 
 .y-scrollable {
@@ -27,58 +27,55 @@
 }
 
 .axes-w {
-    position: absolute;
-    left: 0;
-    bottom: 0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .date-picker {
-    border-radius: 100px;
-    padding: 5px 15px;
-    background: #ededed;
-    cursor: pointer;
-    font-size: 11px;
-    margin-right: 5px;
+  border-radius: 100px;
+  padding: 5px 15px;
+  background: #ededed;
+  cursor: pointer;
+  font-size: 11px;
+  margin-right: 5px;
 }
 
 .date-picker:hover {
-    transition: 300ms;
-    background: #dc2e2e;
+  transition: 300ms;
+  background: #dc2e2e;
 }
 
 .date-picker a {
-    color: white;
+  color: white;
 }
 
 .time-slot {
   position: relative;
   display: inline-block;
-  border-radius: 3px;
   border: 1px grey solid;
   text-align: center;
   white-space: nowrap;
   margin: 0 !important;
-  boder-left: 2px solid white !important;    
   background: #525657;
   color: white;
   font-weight: bold;
   border-radius: 0;
-  margin: 0 5px;
 }
 
 .time-slot:after {
-    position: absolute;
-    bottom: -13px;
-    content: '\25BC';
-    font-size: 15px;
-    color: #525657; 
-      left: 92px;
+  position: absolute;
+  bottom: -13px;
+  content: '\25BC';
+  font-size: 15px;
+  color: #525657;
+  left: 92px;
 }
 
 .lane {
-    display: flex;
-    min-height: 40px;
-    margin: 5px 0px;
+  display: flex;
+  min-height: 40px;
+  margin: 5px 0px;
 }
 
 .col-place {
@@ -90,7 +87,7 @@
 }
 
 .col-place:first-child {
-    margin-top: -15px !important ;
+  margin-top: -15px !important;
 }
 
 .place {
@@ -121,28 +118,14 @@
   left: 0;
   right: 0;
   position: absolute !important;
-    display: table-cell;
+  display: table-cell;
   border: 1px #0040D0 solid;
   border-radius: 3px;
 }
 
-.place-event {
-    position: absolute;
-    right: 10px;
-    top: 7px;
-    height: 25px;
-    width: auto;
-    background: white;
-    color: #525657;
-    border-radius: 100px;
-    padding: 5px 9px;
-    font-weight: bold;
-    font-size: 10px;
-}
-
 .place-fix {
-      display: block;
-      z-index: 999999;
-      margin-bottom: 6px;
-      height: 39px;
+  display: block;
+  z-index: 999999;
+  margin-bottom: 6px;
+  height: 39px;
 }
